@@ -224,10 +224,10 @@ public class GracefulShutdownTest extends HazelcastTestSupport {
 
         final CountDownLatch latch = new CountDownLatch(instances.length);
         for (final HazelcastInstance instance : instances) {
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 instance.shutdown();
                 latch.countDown();
-            }).start();
+            });
         }
 
         assertOpenEventually(latch);
@@ -264,10 +264,10 @@ public class GracefulShutdownTest extends HazelcastTestSupport {
         int startIndex = includeMaster ? 0 : 1;
         for (int i = startIndex; i < instances.length; i += 2) {
             final int index = i;
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 instances[index].shutdown();
                 latch.countDown();
-            }).start();
+            });
         }
 
         assertOpenEventually(latch);
@@ -295,11 +295,11 @@ public class GracefulShutdownTest extends HazelcastTestSupport {
         final CountDownLatch latch = new CountDownLatch(count);
         for (int i = 0; i < count; i++) {
             final int index = i;
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 HazelcastInstance instance = instances.get(index);
                 instance.shutdown();
                 latch.countDown();
-            }).start();
+            });
         }
 
         assertOpenEventually(latch);
