@@ -70,20 +70,12 @@ public class SecondsBasedEntryTaskSchedulerStressTest {
                 = new SecondsBasedEntryTaskScheduler<>(executorService, processor, ScheduleType.FOR_EACH);
 
         for (int i = 0; i < NUMBER_OF_THREADS; i++) {
-            final Thread thread = new Thread() {
-                final Random random = new Random();
-
-                @Override
-                public void run() {
-                    for (int j = 0; j < NUMBER_OF_EVENTS_PER_THREAD; j++) {
-                        scheduler.schedule(getDelayMillis(), j, null);
-                    }
+            final Thread thread = Thread.ofVirtual().unstarted(() -> {
+            	random = new Random();
+                for (int j = 0; j < NUMBER_OF_EVENTS_PER_THREAD; j++) {
+                    scheduler.schedule(random.nextInt(5000) + 1, j, null);
                 }
-
-                private int getDelayMillis() {
-                    return random.nextInt(5000) + 1;
-                }
-            };
+            });
             thread.start();
         }
 
@@ -107,26 +99,18 @@ public class SecondsBasedEntryTaskSchedulerStressTest {
         final Map<Integer, Integer> latestValues = new ConcurrentHashMap<>();
 
         for (int i = 0; i < NUMBER_OF_THREADS; i++) {
-            final Thread thread = new Thread() {
-                final Random random = new Random();
+            final Thread thread = Thread.ofVirtual().unstarted(() -> {
+                Random random = new Random();
+                for (int j = 0; j < NUMBER_OF_EVENTS_PER_THREAD; j++) {
+                    int key = random.nextInt(numberOfKeys);
 
-                @Override
-                public void run() {
-                    for (int j = 0; j < NUMBER_OF_EVENTS_PER_THREAD; j++) {
-                        int key = random.nextInt(numberOfKeys);
-
-                        synchronized (locks[key]) {
-                            if (scheduler.schedule(getDelayMillis(), key, j)) {
-                                latestValues.put(key, j);
-                            }
+                    synchronized (locks[key]) {
+                        if (scheduler.schedule(random.nextInt(5000) + 1;, key, j)) {
+                            latestValues.put(key, j);
                         }
                     }
                 }
-
-                private int getDelayMillis() {
-                    return random.nextInt(5000) + 1;
-                }
-            };
+            });
             thread.start();
         }
 
